k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: D:\dev\Develop\collectorPerso\k8s\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
      matchLabels:
        io.kompose.service: frontend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: frontend
    spec:
      containers:
      - image: collector-frontend:latest
        name: frontend
        imagePullPolicy: Never
        resources: {}
      restartPolicy: Always
status: {}
