k8s/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    io.kompose.service: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: keycloak
  template:
    metadata:
      labels:
        io.kompose.service: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:22.0.1
        args: ["start-dev", "--import-realm"]
        volumeMounts:
        - mountPath: /opt/keycloak/data
          name: keycloak-data
        - mountPath: /opt/keycloak/data/import/realm-export.json
          name: realm-file
          subPath: realm-export.json
      volumes:
      - name: keycloak-data
        persistentVolumeClaim:
          claimName: keycloak-data
      - name: realm-file
        configMap:
          name: keycloak-realm-json
