k8s/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: prometheus
  name: prometheus
spec:
  replicas: 1
  selector:
      matchLabels:
        io.kompose.service: prometheus
  template:
    metadata:
      labels:
        io.kompose.service: prometheus
    spec:
      containers:
      - image: prom/prometheus:latest
        name: prometheus
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: config-volume
          mountPath: /etc/prometheus/prometheus.yml
          subPath: prometheus.yml
      restartPolicy: Always
      volumes:
      - name: config-volume
        configMap:
          name: prometheus-config
