k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    io.kompose.service: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
