k8s/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  selector:
    io.kompose.service: grafana
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
