k8s/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  selector:
    io.kompose.service: keycloak
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
