k8s/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    io.kompose.service: prometheus
spec:
  selector:
    io.kompose.service: prometheus
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
